# ugc

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
config/: env.example  uvicorn_log_config.json
docs/: ALERTS.md  BACKUP.md  INSTAGRAM_WEBHOOK_QUICKSTART.md  INSTAGRAM_WEBHOOK_SETUP.md  LOGGING.md  METRICS.md
filebeat/: README.md  filebeat.yml
nginx/: .gitignore  FIX_IP_ERROR.md  QUICKSTART.md  README.md  SETUP_FOR_IP.md  TROUBLESHOOTING.md  docker-compose.self-signed.yml  enable-https.sh  generate-self-signed.sh  init-letsencrypt.sh  nginx-https.conf  nginx.conf  setup-ssl.sh
scripts/: backup_cron.sh  backup_db.py  backup_loop.sh  restore_db.py  subscribe_instagram_webhook.py
src/: sitecustomize.py
tests/: conftest.py  test_admin_app.py  test_admin_auth.py  test_admin_config.py  test_admin_moderation.py  test_admin_notification_service.py  test_advertiser_registration_service.py  test_age_parser.py  test_app.py  test_blogger_registration_service.py  test_complaint_service.py  test_config.py  test_contact_pricing_service.py  test_container.py  test_content_moderation_service.py  test_db_repositories.py  test_db_session.py  test_draft_prompts.py  test_error_handler_middleware.py  test_feedback_scheduler.py  test_fsm_draft_serializer.py  test_fsm_draft_service.py  test_handler_utils.py  test_handlers_advertiser_registration.py  test_handlers_blogger_registration.py  test_handlers_cancel.py  test_handlers_complaints.py  test_handlers_feedback.py  test_handlers_payments.py  (+39 more)
(+142 files in other folders)
