 [project]
 name = "ugc-bot"
 version = "0.1.0"
 description = "Telegram bot MVP for UGC matching"
 requires-python = ">=3.10"
dependencies = [
 "pydantic>=2.6.0,<3.0.0",
 "pydantic-settings>=2.2.1,<3.0.0",
 "aiogram>=3.4.1,<4.0.0",
 "redis>=5.0.0,<6.0.0",
 "fastapi>=0.110.0,<1.0.0",
 "sqladmin>=0.16.0,<1.0.0",
 "jinja2>=3.1.3,<4.0.0",
 "itsdangerous>=2.1.2,<3.0.0",
 "python-multipart>=0.0.9,<1.0.0",
 "uvicorn>=0.30.0,<1.0.0",
 "SQLAlchemy>=2.0.25,<3.0.0",
 "alembic>=1.13.1,<2.0.0",
 "psycopg[binary]>=3.1.18,<4.0.0",
 "kafka-python>=2.0.2,<3.0.0",
 "httpx>=0.25.0,<1.0.0",
 ]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.5,<0.24.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "httpx>=0.25.0,<1.0.0",
  "ruff>=0.6.0,<0.7.0",
  "mypy>=1.10.0,<2.0.0",
]
 
 [build-system]
 requires = ["setuptools>=68"]
 build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
  "integration: requires external services like Postgres",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
